--- a/config.json
+++ b/config.json
@@ -2,14 +2,13 @@
     "name": "Flood and SLR",
 	"pluginHeight": 450,
 	"regions": [
-		
 		{
-			"name": "Monterey",
+			"name": "Ventura",
             "extent": {
-                "xmin": -1.36189391907E7,
-                "ymin": 4382453.298600003,
-                "xmax": -1.3538941220800001E7,
-                "ymax": 4456926.618699998,
+                "xmin": -13288721.369912772,
+                "ymin": 4035936.3860100782,
+                "xmax": -13245012.962495957,
+                "ymax": 4075072.7842828752,
                 "spatialReference": {
                     "wkid": 102100,
                     "latestWkid": 3857
@@ -20,16 +19,57 @@
 				{
 					"name": "Management Actions",
 					"controls": [
-						{"name":"Select the hazard to view", "group": "main", "values":[{"name":"Rising Tide","value":"tide_area", "help": "Year 2010", "selected": true},
+						{"name":"Select the hazard to view", "group": "main", "values":[{"name":"Rising Tiders","value":"RT", "help": "Year 2010"},
+																						{"name":"Aggregated Rising Tide", "value":"ART"},
+																						{"name":"Dune Erosion Hazard Zone", "value":"DEHZ"},
+																						{"name":"Aggregated Dune Erosion Hazard Zone", "value":"ADEHZ"},
+																						{"name":"Cliff Erosion Hazard Zone", "value":"CEHZ"},
+																						{"name":"Aggregated Cliff Erosion Hazard Zone", "value":"ACEHZ"},
+																						{"name":"Coastal Storm Flood Hazard Zone", "value":"CSFHZ"},
+																						{"name":"Aggregated Coastal Storm Flood Hazard Zone", "value":"ACSFHZ"},
+																						], "type": "radio"},
+						{"name":"Year", "group": "main", "values":[{"name":"Current","value":"CT", "selected": true},{"name":"2030", "value":"2030"},{"name":"2060", "value":"2060"},{"name":"2100", "value":"2100"}], "type": "slider"},
+						{"name":"Sea Level Rise Scenario", "dependent" : "2030|2060|2100", "group": "main", "values":[{"name":"Low","value":"Low", "selected": true},{"name":"Medium", "value":"Med"},{"name":"High", "value":"High"}], "type": "slider"},	
+						{"name":"Erosion projection", "dependent" : "DEHZ|CEHZ", "group": "main", "values":[{"name":"Long Term","value":"LT", "selected": true},{"name":"Long Term and Large Storm", "value":"LTLS"}], "type": "radio"},
+						{"name":"Future Erosion Scenarios", "group": "main", "values":[{"name":"No Change","value":"NC", "selected": true},{"name":"Sand Mining Cessation", "value":"SMC"},{"name":"Doubling of El Niño storm impacts in a decade", "value":"DEL"}], "type": "radio"}
+					
+					], 
+					"combos": {
+
+					},
+					"mainURL": "http://dev.services2.coastalresilience.org:6080/arcgis/rest/services/Ventura_County/Ventura_SLR/MapServer"
+				
+				}			
+			]
+		},
+		{
+			"name": "Monterey",
+            "extent": {
+                "xmin": -1.36189391907E7,
+                "ymin": 4362453.298600003,
+                "xmax": -1.3538941220800001E7,
+                "ymax": 4486926.618699998,
+                "spatialReference": {
+                    "wkid": 102100,
+                    "latestWkid": 3857
+                }
+            },
+			"methods": "methods/SLR.pdf",
+			"tabs" : [
+				{
+					"name": "Management Actions",
+					"titles": [{"name":"1. Select the hazard to view"}, {"name":"2. Select the time and amount of sea level rise"}, undefined, {"name":"3. Select the Erosion options"}],
+					"controls": [
+						{"name":"", "group": "main", "values":[{"name":"Rising Tide","value":"tide_area", "help": "Year 2010", "selected": true},
 																						{"name":"Aggregated Rising Tide", "value":"tide_area_aggr"},
-																						{"name":"Dune Erosion Hazard Zone", "value":"dhz"},
+																						{"name":"Dune Erosion Hazard Zone", "value":"dhz", "style":"padding-top:7px"},
 																						{"name":"Aggregated Dune Erosion Hazard Zone", "value":"dhz_aggr"},
-																						{"name":"Cliff Erosion Hazard Zone", "value":"chz"},
+																						{"name":"Cliff Erosion Hazard Zone", "value":"chz" , "style":"padding-top:7px"},
 																						{"name":"Aggregated Cliff Erosion Hazard Zone", "value":"chz_aggr"},
-																						{"name":"Coastal Storm Flood Hazard Zone", "value":"coastal_floodhz"},
+																						{"name":"Coastal Storm Flood Hazard Zone", "value":"coastal_floodhz", "style":"padding-top:7px"},
 																						{"name":"Aggregated Coastal Storm Flood Hazard Zone", "value":"coastal_floodhz_aggr"},
 																						], "type": "radio"},
-						{"name":"Year", "group": "main", "values":[{"name":"Current","value":"2010", "selected": true},{"name":"2030", "value":"2030"},{"name":"2060", "value":"2060"},{"name":"2100", "value":"2100"}], "type": "slider"},
+						{"name":"Year", "group": "main", "values":[{"name":"Current","value":"2010", "selected": true, "dependent" : "chz|dhz|coastal_floodhz|tide_area"},{"name":"2030", "value":"2030"},{"name":"2060", "value":"2060"},{"name":"2100", "value":"2100"}], "type": "slider"},
 						{"name":"Sea Level Rise Scenario", "dependent" : "2030|2060|2100", "group": "main", "values":[{"name":"Low","value":"s1", "selected": true},{"name":"Medium", "value":"s2"},{"name":"High", "value":"s3"}], "type": "slider"},	
 						{"name":"Erosion projection", "dependent" : "dhz|chz", "group": "main", "values":[{"name":"Long Term","value":"longterm", "selected": true},{"name":"Long Term and Large Storm", "value":"wstorm"}], "type": "radio"},
 						{"name":"Future Erosion Scenarios", "dependent" : "dhz|chz", "group": "main", "values":[{"name":"No Change","value":"nochange", "selected": true},{"name":"Sand Mining Cessation", "value":"stopmining", "dependent" : "dhz"},{"name":"Doubling of El Niño storm impacts in a decade", "value":"stormier"}], "type": "radio"}
