added window style (transparency)
added window style (transparency)

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "name": "Flood and SLR",
 	"pluginHeight": 450,
+	"windowStyles": {"opacity": 0.75},
 	"regions": [
 		{
 			"name": "Ventura",
