--- a/config.json
+++ b/config.json
@@ -52,19 +52,19 @@
 				{
 					"name": "NA",
 					"controls": [
-						{"name":"Storm Surge", "group": "main", "values":[{"name":"None","value":"nostorm" },{"name":"Storm (Hurricane Wilma)","value":"storm", selected: true}	], "type": "radio"},
-						{"name":"Choose Sea Level Rise (SLR) Inundation", "group": "main", "values":[{"name":"None","value":"none", "dependent": "storm"},{"name":"1 Foot","value":"1ft", "selected": true},{"name":"2 Feet", "value":"2ft"},{"name":"3 Feet", "value":"3ft"},{"name":"4 Feet", "value":"4ft"}], "type": "slider"}
+						{"name":"Choose Sea Level Rise (SLR) Inundation", "group": "main", "values":[{"name":"None","value":"none"},{"name":"1 Foot","value":"1ft", "selected": true},{"name":"2 Feet", "value":"2ft"},{"name":"3 Feet", "value":"3ft"},{"name":"4 Feet", "value":"4ft"}], "type": "slider"},
+						{"name":"Storm Surge", "group": "main", "values":[{"name":"None","value":"nostorm", "dependent": "1ft|2ft|3ft|4ft" },{"name":"Storm (Hurricane Wilma)","value":"storm", selected: true}], "type": "radio"}
 					], 
 					"combos": {
-						"nostorm|1ft": [{"type":"dynamic","show":[6]}],
-						"nostrom|2ft": [{"type":"dynamic","show":[7]}],
-						"nostorm|3ft": [{"type":"dynamic","show":[8]}],
-						"nostorm|4ft": [{"type":"dynamic","show":[9]}],
-						"storm|none": [{"type":"dynamic","show":[10]}],						
-						"storm|1ft": [{"type":"dynamic","show":[11]}],
-						"strom|2ft": [{"type":"dynamic","show":[12]}],
-						"storm|3ft": [{"type":"dynamic","show":[13]}],
-						"storm|4ft": [{"type":"dynamic","show":[14]}],
+						"1ft|nostorm": [{"type":"dynamic","show":[6]}],
+						"2ft|nostorm": [{"type":"dynamic","show":[7]}],
+						"3ft|nostorm": [{"type":"dynamic","show":[8]}],
+						"4ft|nostorm": [{"type":"dynamic","show":[9]}],
+						"none|storm|none": [{"type":"dynamic","show":[10]}],						
+						"1ft|storm": [{"type":"dynamic","show":[11]}],
+						"2ft|storm": [{"type":"dynamic","show":[12]}],
+						"3ft|storm": [{"type":"dynamic","show":[13]}],
+						"4ft|storm": [{"type":"dynamic","show":[14]}],
 					},
 					"mainURL": "http://dev.services2.coastalresilience.org:6080/arcgis/rest/services/Southeast_Florida/Flood_and_SLR/MapServer"
 				
